--- a/platformio.ini
+++ b/platformio.ini
@@ -16,17 +16,18 @@ build_flags =
     ; -DCFG_DEBUG=2
 	-DSW_VERSION_1=1 ; major version increase on API change / not backwards compatible
 	-DSW_VERSION_2=0 ; minor version increase on API change / backward compatible
-	-DSW_VERSION_3=1 ; patch version increase on bugfix, no affect on API
+	-DSW_VERSION_3=2 ; patch version increase on bugfix, no affect on API
 	-DLIB_DEBUG=0    ; 0 Disable LoRaWAN debug output
 	-DAPI_DEBUG=0    ; 0 Disable WisBlock API debug output
-	-DMY_DEBUG=1     ; 0 Disable application debug output
+	-DMY_DEBUG=0     ; 0 Disable application debug output
 	-DNO_BLE_LED=1   ; 1 Disable blue LED as BLE notificator
 	# -DHIGH_ACCURACY=1 ; Enable high precision measurement of ToF sensor
 	-DLONG_RANGE=1 ; Enable long range measurement of ToF sensor
 lib_deps = 
 	beegee-tokyo/SX126x-Arduino
-	beegee-tokyo/WisBlock-API
+	beegee-tokyo/WisBlock-API-V2
 	sparkfun/SparkFun LIS3DH Arduino Library
 	pololu/VL53L0X
-extra_scripts = pre:rename.py
-
+extra_scripts = 
+	pre:rename.py
+	post:create_uf2.py
